# vbss-cchub

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
apps/desktop/: build-sidecar.mjs  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/landing/: index.html  package.json  tsconfig.json  vite.config.ts
apps/landing/public/: robots.txt  sitemap.xml
apps/landing/src/: App.tsx  main.tsx  styles.css
apps/server/: package.json  tsconfig.json
apps/server/hooks/: configure.mjs  find-host-window.ps1  notify.mjs  notify.sh  settings.example.json
apps/server/scripts/: focus.ps1
apps/server/src/: config.ts  db.ts  ensure-extension.ts  focus.ts  hooks-control.ts  index.ts  sse.ts  transcript.ts  types.ts
apps/ui/: index.html  package.json  vite.config.ts
apps/ui/public/: manifest.webmanifest
apps/ui/src/: App.tsx  api.ts  main.tsx  mock.ts  notify.ts  stale.ts  styles.css  types.ts
apps/ui/src/components/: BrandMark.tsx  GroupManager.tsx  SessionCard.tsx  Widget.tsx
apps/vscode-ext/: README.md  extension.js  package.json
scripts/: release.mjs
